chore: change sample to sqs

--- a/content/WorkerService/docker-compose.yml
+++ b/content/WorkerService/docker-compose.yml
@@ -1,18 +1,15 @@
 version: '3.4'
 
 services:
-    rabbitmq:
-        image: 'rabbitmq:3-management-alpine'
-        hostname: rabbitmq
-        environment:
-            - RABBITMQ_DEFAULT_USER=myUserName
-            - RABBITMQ_DEFAULT_PASS=myPassword
+    localstack:
+        image: localstack/localstack:0.11.2
         ports:
-            - '15672:15672'
-            - '5672:5672'
-        expose:
-            - 15672
-            - 5672
+            - "4566:4566"
+        environment:
+            - SERVICES=sqs
+            - AWS_ACCESS_KEY_ID=guest
+            - AWS_SECRET_ACCESS_KEY=guest
+            - AWS_DEFAULT_REGION=us-east-1
 
     postgres:
         image: postgres:12-alpine
@@ -23,25 +20,24 @@ services:
             POSTGRES_USER: "admin"
             POSTGRES_PASSWORD: "password"
 
-    rabbitmq-create-queues:
-        image: activatedgeek/rabbitmqadmin:latest
+    localstack-create-queues:
+        image: amazon/aws-cli:2.0.28
+        environment:
+            - AWS_ACCESS_KEY_ID=guest
+            - AWS_SECRET_ACCESS_KEY=guest
+            - AWS_DEFAULT_REGION=us-east-1
         depends_on:
-            - rabbitmq
-        links: ["rabbitmq"]
-        hostname: rabbitmq-create-queues
+            - localstack
+        links: ["localstack"]
+        hostname: localstack-create-queues
         entrypoint: /bin/sh -c
         command: >
             "
-              while ! nc -z rabbitmq 5672; do echo waiting; sleep 3; done;
-              rabbitmqadmin --host rabbitmq -umyUserName -pmyPassword declare exchange name=WorkerServiceExchange type=fanout
-              rabbitmqadmin --host rabbitmq -umyUserName -pmyPassword declare queue name=GetFromDataBaseMessageQueue durable=false
-              rabbitmqadmin --host rabbitmq -umyUserName -pmyPassword declare queue name=GetFromExternalApiMessageQueue durable=false
-              rabbitmqadmin --host rabbitmq -umyUserName -pmyPassword declare queue name=SendToQueueMessageQueue durable=false
-              rabbitmqadmin --host rabbitmq -umyUserName -pmyPassword declare queue name=SentToQueueMessageQueue durable=false
-              rabbitmqadmin --host rabbitmq -umyUserName -pmyPassword declare binding source="WorkerServiceExchange" destination="GetFromDataBaseMessageQueue" destination_type="queue"
-              rabbitmqadmin --host rabbitmq -umyUserName -pmyPassword declare binding source="WorkerServiceExchange" destination="GetFromExternalApiMessageQueue" destination_type="queue"
-              rabbitmqadmin --host rabbitmq -umyUserName -pmyPassword declare binding source="WorkerServiceExchange" destination="SendToQueueMessageQueue" destination_type="queue"
-              rabbitmqadmin --host rabbitmq -umyUserName -pmyPassword declare binding source="WorkerServiceExchange" destination="SentToQueueMessageQueue" destination_type="queue"
-              rabbitmqadmin --host rabbitmq -umyUserName -pmyPassword list queues
-              echo 'RABBIT-DONE!' 
+                while ! aws --endpoint-url=http://localstack:4566 sqs list-queues > /dev/null; do echo waiting; sleep 3; done;
+                aws --endpoint-url=http://localstack:4566 sqs create-queue --queue-name GetFromDataBaseMessageQueue.fifo --attributes FifoQueue=true
+                aws --endpoint-url=http://localstack:4566 sqs create-queue --queue-name GetFromExternalApiMessageQueue.fifo --attributes FifoQueue=true
+                aws --endpoint-url=http://localstack:4566 sqs create-queue --queue-name SendToQueueMessageQueue.fifo --attributes FifoQueue=true
+                aws --endpoint-url=http://localstack:4566 sqs create-queue --queue-name SentToQueueMessageQueue.fifo --attributes FifoQueue=true
+                aws --endpoint-url=http://localstack:4566 sqs list-queues
+                echo 'SQS-DONE!' 
             "
