--- a/content/WorkerService/WorkerService.Application/WorkerService.Application.csproj
+++ b/content/WorkerService/WorkerService.Application/WorkerService.Application.csproj
@@ -31,7 +31,7 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(noqueue)' != 'true'">
-		<PackageReference Include="Herald.MessageQueue.RabbitMq" Version="7.0.3" />
+		<PackageReference Include="Herald.MessageQueue.Sqs" Version="7.0.3" />
 	</ItemGroup>
 	
 	<ItemGroup Condition="'$(noexternalapi)' == 'true'">
