--- a/content/WorkerService/.vscode/launch.json
+++ b/content/WorkerService/.vscode/launch.json
@@ -5,10 +5,36 @@
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-            "name": ".NET Core Launch (web)",
+            "name": ".NET Core Launch (docker-compose)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "docker-compose",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/WorkerService.Worker/bin/Debug/netcoreapp3.1/WorkerService.Worker.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/WorkerService.Worker",
+            "stopAtEntry": false,
+            // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
+                "uriFormat": "%s/hc"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
+            // Use IntelliSense to find out which attributes exist for C# debugging
+            // Use hover for the description of the existing attributes
+            // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
+            "name": ".NET Core Launch (web)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/WorkerService.Worker/bin/Debug/netcoreapp3.1/WorkerService.Worker.dll",
             "args": [],
