--- a/content/WorkerService/WorkerService.Application/WorkerService.Application.csproj
+++ b/content/WorkerService/WorkerService.Application/WorkerService.Application.csproj
@@ -5,7 +5,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Remove="**\.keep" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<Folder Include="Entities\" />
+		<Folder Include="Features\" />
+		<Folder Include="Infrastructure\" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -14,33 +20,15 @@
 		<PackageReference Include="MediatR" Version="9.0.0" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(nodatabase)' == 'true'">
-		<Compile Remove="Entities\**" />
-		<Compile Remove="Features\GetFromDataBase\**" />
-		<Compile Remove="Infrastructure\Repositories\**" />
+		<PackageReference Include="Herald.MessageQueue.Sqs" Version="8.1.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(nodatabase)' != 'true'">
 		<PackageReference Include="Herald.EntityFramework" Version="3.1.0" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(noqueue)' == 'true'">
-		<Compile Remove="Features\SendToQueue\**" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(noqueue)' != 'true'">
-		<PackageReference Include="Herald.MessageQueue.Sqs" Version="8.1.0" />
-	</ItemGroup>
-	
-	<ItemGroup Condition="'$(noexternalapi)' == 'true'">
-		<Compile Remove="Features\GetFromExternalApi\**" />
-		<Compile Remove="Infrastructure\WebServices\**" />
-	</ItemGroup>
+	</ItemGroup>		
 
 	<ItemGroup Condition="'$(noexternalapi)' != 'true'">
 		<PackageReference Include="Refit" Version="5.2.4" />
 	</ItemGroup>
-	
+
 </Project>
