fix: parametrized docker compose and docker settings

--- a/content/WorkerService/docker-compose.override.yml
+++ b/content/WorkerService/docker-compose.override.yml
@@ -7,10 +7,10 @@ services:
         environment:
             - ASPNETCORE_URLS=https://+:443;http://+:80
             - ASPNETCORE_ENVIRONMENT=Development
+#if (!noqueue)
             - AWS_ACCESS_KEY_ID=guest
             - AWS_SECRET_ACCESS_KEY=guest
             - AWS_DEFAULT_REGION=us-east-1
-            - ConnectionStrings__DefaultConnection=Server=postgres;Port=5432;Database=postgres;User Id=admin;Password=password;
             - MessageQueueOptions__ServiceURL=http://localstack:4566
             - MessageQueueOptions__Region=us-east-1
             - MessageQueueOptions__GroupId=WorkerService
@@ -18,12 +18,16 @@ services:
             - MessageQueueOptions__VisibilityTimeout=1
             - MessageQueueOptions__EnableFifo=true
             - MessageQueueOptions__RequestDelaySeconds=2
-        ports:
-            - "5001:443"
-            - "5000:80"
+#endif
+#if (!nodatabase)
+            - ConnectionStrings__DefaultConnection=Server=postgres;Port=5432;Database=postgres;User Id=admin;Password=password;
+#endif
         build:
             context: .
             dockerfile: WorkerService.Worker/Dockerfile
+        ports:
+            - "5001:443"
+            - "5000:80"
         volumes:
             - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
             - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
