Feature/parametrized docker file (#6)
* fix: parametrized docker compose and docker settings

* fix: parametrized docker and nq option

--- a/content/WorkerService/docker-compose.override.yml
+++ b/content/WorkerService/docker-compose.override.yml
@@ -10,7 +10,6 @@ services:
             - AWS_ACCESS_KEY_ID=guest
             - AWS_SECRET_ACCESS_KEY=guest
             - AWS_DEFAULT_REGION=us-east-1
-            - ConnectionStrings__DefaultConnection=Server=postgres;Port=5432;Database=postgres;User Id=admin;Password=password;
             - MessageQueueOptions__ServiceURL=http://localstack:4566
             - MessageQueueOptions__Region=us-east-1
             - MessageQueueOptions__GroupId=WorkerService
@@ -18,12 +17,15 @@ services:
             - MessageQueueOptions__VisibilityTimeout=1
             - MessageQueueOptions__EnableFifo=true
             - MessageQueueOptions__RequestDelaySeconds=2
-        ports:
-            - "5001:443"
-            - "5000:80"
+#if (!nodatabase)
+            - ConnectionStrings__DefaultConnection=Server=postgres;Port=5432;Database=postgres;User Id=admin;Password=password;
+#endif
         build:
             context: .
             dockerfile: WorkerService.Worker/Dockerfile
+        ports:
+            - "5001:443"
+            - "5000:80"
         volumes:
             - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
             - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
