feat: allow choose framework version

--- a/content/WorkerService/WorkerService.Application/WorkerService.Application.csproj
+++ b/content/WorkerService/WorkerService.Application/WorkerService.Application.csproj
@@ -17,18 +17,19 @@
 	<ItemGroup>
 		<PackageReference Include="Herald.Result" Version="1.0.0" />
 		<PackageReference Include="Mapster" Version="7.2.0" />
-		<PackageReference Include="MediatR" Version="9.0.0" />
-		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+		<PackageReference Include="MediatR" Version="10.0.1" />
+		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
 		<PackageReference Include="Herald.MessageQueue.Sqs" Version="8.1.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(nodatabase)' != 'true'">
 		<PackageReference Include="Herald.EntityFramework" Version="3.1.0" />
-	</ItemGroup>		
+	</ItemGroup>
 
-	<ItemGroup Condition="'$(noexternalapi)' != 'true'">
-		<PackageReference Include="Refit" Version="5.2.4" />
+	<ItemGroup Condition=" '$(noexternalapi)' != 'true'">
+		<PackageReference Condition="'$(framework)' == 'net6.0'" Include="Refit" Version="6.2.16" />
+		<PackageReference Condition="'$(framework)' != 'net6.0'" Include="Refit" Version="5.2.4" />
 	</ItemGroup>
 
 </Project>
