--- a/content/WorkerService/WorkerService.Tests/WorkerService.Tests.csproj
+++ b/content/WorkerService/WorkerService.Tests/WorkerService.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
@@ -16,10 +16,16 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="coverlet.collector" Version="3.1.0">
+		<PackageReference Include="coverlet.collector" Version="3.1.1">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\WorkerService.Application\WorkerService.Application.csproj" />
+	  <ProjectReference Include="..\WorkerService.Infrastructure\WorkerService.Infrastructure.csproj" />
+	  <ProjectReference Include="..\WorkerService.Worker\WorkerService.Worker.csproj" />
 	</ItemGroup>
 
 </Project>
