feat: allow choose queue type and database type
- Allow to choose relational database type (postgres, mysql, sqlserver).
- Allow to choose queue type (rabbitmq, kafka, sqs, azure).
- Change switches from opt out to opt in.
- Update herald packages to latest version.
- Make template Visual Studio compatible.
- Update docker images.

--- a/content/WorkerService/WorkerService.Worker/Dockerfile31
+++ b/content/WorkerService/WorkerService.Worker/Dockerfile31
@@ -1,24 +1,24 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:3.1-alpine AS base
+FROM mcr.microsoft.com/dotnet/aspnet:3.1 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:3.1-alpine AS build
+FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
-COPY ["WebApi.Api/WebApi.Api.csproj", "WebApi.Api/"]
-COPY ["WebApi.Infrastructure/WebApi.Infrastructure.csproj", "WebApi.Infrastructure/"]
-COPY ["WebApi.Application/WebApi.Application.csproj", "WebApi.Application/"]
-RUN dotnet restore "WebApi.Api/WebApi.Api.csproj"
+COPY ["WorkerService.Worker/WorkerService.Worker.csproj", "WorkerService.Worker/"]
+COPY ["WorkerService.Application/WorkerService.Application.csproj", "WorkerService.Application/"]
+COPY ["WorkerService.Infrastructure/WorkerService.Infrastructure.csproj", "WorkerService.Infrastructure/"]
+RUN dotnet restore "WorkerService.Worker/WorkerService.Worker.csproj"
 COPY . .
-WORKDIR "/src/WebApi.Api"
-RUN dotnet build "WebApi.Api.csproj" -c Release -o /app/build
+WORKDIR "/src/WorkerService.Worker"
+RUN dotnet build "WorkerService.Worker.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "WebApi.Api.csproj" -c Release -o /app/publish
+RUN dotnet publish "WorkerService.Worker.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "WebApi.Api.dll"]
+ENTRYPOINT ["dotnet", "WorkerService.Worker.dll"]
