--- a/content/WorkerService/WorkerService.Worker/appsettings.json
+++ b/content/WorkerService/WorkerService.Worker/appsettings.json
@@ -1,7 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=postgres;User Id=admin;Password=password;"
+    //##if (postgre)
+    "PostgreConnection": "Server=localhost;Port=5432;Database=database;User Id=admin;Password=password;",
+    //##elseif (mysql)
+    "MySqlConnection": "Server=localhost;Port=3306;database=database;uid=root;pwd=password;",
+    //##elseif (sqlserver)
+    "SqlServerConnection": "Server=localhost;Database=database;User Id=sa;Password=P@ssw0rd;",
+    //#endif
+    "-": "-"
   },
+  //#if (!noexternalapi)
   "WebServices": {
     "ICepService": {
       "Url": "https://brasilapi.com.br/api",
@@ -9,7 +17,10 @@
       "RetryCount": 3
     }
   },
-  "MessageQueueOptions": {
+  //#endif
+  //#if (sqs)
+  "MessageQueueSqsOptions": {
+    "ConfigSection": "MessageQueueSqsOptions",
     "ServiceURL": "http://localhost:4566",
     "Region": "us-east-1",
     "GroupId": "WorkerService",
@@ -18,6 +29,31 @@
     "EnableFifo": true,
     "RequestDelaySeconds": 2
   },
+  //#endif
+  //#if (kafka)
+  "MessageQueueKafkaOptions": {
+    "ConfigSection": "MessageQueueKafkaOptions",
+    "BootstrapServers": "localhost:9092",
+    "GroupId": "WorkerService",
+    "RequestDelaySeconds": 2
+  },
+  //#endif
+  //#if (rabbitmq)
+  "MessageQueueRabbitMqOptions": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "Username": "user",
+    "Password": "password",
+    "RequestDelaySeconds": 2
+  },
+  //#endif
+  //#if (azure)
+  "MessageQueueAzureOptions": {
+    "ConfigSection": "MessageQueueAzureOptions",
+    "ConnectionString": "UseDevelopmentStorage=true",
+    "RequestDelaySeconds": 2
+  },
+  //#endif
   "Logging": {
     "LogLevel": {
       "Default": "Information",
